Extract documentation to Gradle subproject